@@ -3,6 +3,8 @@ Auto IRC Bot 3.0: Change Log
 
 3.0 Indev
 ==================================================================
+    * Fixed a bug in API::Log that caused invalid months.
+    * Changed how command data is passed to fix a bug.
     * Removed dependency Async.
     * Rewrote the socket engine.
     * Added cmd_add|del|run() to API::Std for commands.
